[package]
name = "simple_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
serde_json = "1.0.70"
tokio-serde-json = "0.3.0"
serde = "1.0.117"
serde_derive = "1.0.117"

[lib]
name = "user_io"
path = "./lib/user_io.rs"